# pomodoro-timer-linux

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/app/: App.cpp  app.hpp
src/separators/: Separators.cpp  separators.hpp
src/timer/: Timer.cpp  timer.hpp
